Cleaned up answer bubbles for responsiveness, hide sum of questions when the game starts.  All edge cases and bugs have been squashed, ready for beta.

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -77,7 +77,7 @@ body {
 
 header {
     width: 100%;
-    height: 50px;
+    height: 25px;
 }
 
 /* Main CSS Section */
@@ -445,11 +445,12 @@ header {
     width: 95%;
     height: 95%;
     background-color: white;
+    text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
     font-family: ASAP, Calibrai, Arial, Helvetica, sans-serif;
-    font-size: 18px;
+    font-size: 16px;
     transition: all .6s cubic-bezier(0.22, 1, 0.36, 1);
     cursor: pointer;
 }
@@ -457,21 +458,25 @@ header {
 #answer-1 {
     grid-area: answer-1;
     border-radius: 5px 5px 0px 5px;
+    padding: 5px 15px 5px 5px;
 }
 
 #answer-2 {
     grid-area: answer-2;
     border-radius: 5px 5px 5px 0px;
+    padding: 5px 5px 5px 15px;
 }
 
 #answer-3 {
     grid-area: answer-3;
     border-radius: 5px 0px 5px 5px;
+    padding: 5px 15px 5px 5px;
 }
 
 #answer-4 {
     grid-area: answer-4;
     border-radius: 0px 5px 5px 5px;
+    padding: 5px 5px 5px 15px;
 }
 
 .answer-text {
@@ -599,5 +604,7 @@ footer {
 
     #answer-1, #answer-2, #answer-3, #answer-4 {
         border-radius: 5px 5px 5px 5px;
+        padding: 5px;
+        font-size: 12px;
     }
 }
